@@ -84,49 +84,29 @@ static ProviderRegister *pClone(ProviderRegister * br)
    return NULL;
 }
 
-static void addProviderToHT(ProviderInfo *info, ProviderRegister *br, UtilHashTable *provNameHT)
+static void addProviderToHT(ProviderInfo *info, ProviderRegister *br)
 {
-	ProviderInfo *checkDummy;
-	UtilHashTable *ht = ((ProviderBase *) br->hdl)->ht;
+    ProviderInfo *checkDummy;
+    UtilHashTable *ht = ((ProviderBase *) br->hdl)->ht;
+    
+    /* first we add the provider to the providerRegister with the classname
+     * as a key*/
 	
-	/* let the "master" be itself by default - the master is the first
-	 * provider entry in the providerRegister which serves the same class.
-	 * When we find that there is already the same provider in the register for
-	 * another class, the master pointer needs to be changed to that one*/
-	info->master = info;
-	
-	
-	/* first we add the provider to the providerRegister with the classname
-	 * as a key*/
-	
-	checkDummy = ht->ft->get(ht, info->className);
-	if(checkDummy) {
-		/* Another provider is in the register, but the newly found
-		 * wants to serve the same class - so we do not add it to the
-		 * register but append it to the one already found or to its master*/
-		 if(strcmp(checkDummy->providerName, info->providerName) == 0) {
-		 	/* double registration - discard */
-		 	freeInfoPtr(info);
-		 	return;
-		 } else {
-		 	(checkDummy->master)->nextInRegister = info;
-		 }
-	} else {
-		ht->ft->put(ht, info->className, info);
-	}
-	
-	/* The second step is to add the provider to a temporary ht which has
-	 * the providername as a key. If we find a provider, the found one
-	 * becomes the master of the new one. With this establish that always 
-	 * the same info-ptr is returned, even if a provider serves multiple
-	 * classes*/ 
-	checkDummy = provNameHT->ft->get(provNameHT, info->providerName);
-	if(checkDummy) {
-		info->master = checkDummy;
-		checkDummy->type |= info->type;
-	} else {
-		provNameHT->ft->put(provNameHT, info->providerName, info);
-	}
+    checkDummy = ht->ft->get(ht, info->className);
+    if(checkDummy) {
+    /* Another provider is in the register, but the newly found
+     * wants to serve the same class - so we do not add it to the
+     * register but append it to the one already found or to its master*/
+        if(strcmp(checkDummy->providerName, info->providerName) == 0) {
+            /* double registration - discard */
+            freeInfoPtr(info);
+            return;
+        } else {
+            checkDummy->nextInRegister = info;
+        }
+    } else {
+        ht->ft->put(ht, info->className, info);
+    }
 }
 
 ProviderRegister *newProviderRegister(char *fn)
@@ -139,8 +119,7 @@ ProviderRegister *newProviderRegister(char *fn)
    CntlVals rv;
    int id=0;
    int interopFound=0;
-   UtilHashTable *provNameHT = UtilFactory->newHashTable(61,
-                  UtilHashTable_charKey | UtilHashTable_ignoreKeyCase);
+
    ProviderRegister *br = (ProviderRegister *) malloc(sizeof(ProviderRegister) +
                                                       sizeof(ProviderBase));
    ProviderBase *bb = (ProviderBase *) br + 1;
@@ -191,7 +170,7 @@ ProviderRegister *newProviderRegister(char *fn)
                else if (qualiProvInfoPtr==NULL) {
                   if (strcmp(info->className,"$QualifierProvider$")==0) qualiProvInfoPtr=info;
                }
-               addProviderToHT(info, br, provNameHT);
+               addProviderToHT(info, br);
             }
             info = (ProviderInfo *) calloc(1, sizeof(ProviderInfo));
             info->className = strdup(rv.id);
@@ -263,7 +242,7 @@ ProviderRegister *newProviderRegister(char *fn)
       }
 
       if (info) {
-      	 addProviderToHT(info, br, provNameHT);
+      	 addProviderToHT(info, br);
       }
    }
    if (in) {
@@ -294,7 +273,6 @@ ProviderRegister *newProviderRegister(char *fn)
       exit(5);
    }
    if (stmt) free(stmt);
-   CMRelease(provNameHT);
    return br;
 }
 
@@ -311,7 +289,7 @@ static ProviderInfo *getProvider(ProviderRegister * br,
    ProviderBase *bb = (ProviderBase *) br->hdl;
    ProviderInfo *info = bb->ht->ft->get(bb->ht, clsName);
    if (info && info->type & type) {
-      return info->master;
+      return info;
    }
    return NULL;
 }
