@@ -8,6 +8,7 @@ Bugs fixed:
 - 1701174 Fixed Bug with ein on classes in interop namespace
 - 1702310 Fixed indProv segfaults while ci with NULL query
 - 1708071 Fixed interopProvider choking on getinstance
+- 1708568 Fixed providers for multiple classes are invoked only once
 
 Changes in 1.2.2
 ================
